--- a/src/sass/blocks/advantages.scss
+++ b/src/sass/blocks/advantages.scss
@@ -54,7 +54,7 @@
   margin-bottom: 20px;
 
   font: $font-text-normal-mobile;
-  color: $color-special-dark-grey;
+  color: $color-6;
 
   position: relative;
   z-index: 2;
@@ -82,7 +82,7 @@
         z-index: -1;
 
         font: $font-advantages-number-tablet;
-        color: $color-secondary;
+        color: $color-4;
       }
     }
 
@@ -98,7 +98,7 @@
         z-index: -1;
 
         font: $font-advantages-number-tablet;
-        color: $color-secondary;
+        color: $color-4;
       }
     }
 
@@ -116,7 +116,7 @@
         z-index: -1;
 
         font: $font-advantages-number-tablet;
-        color: $color-secondary;
+        color: $color-4;
       }
     }
 
@@ -132,7 +132,7 @@
         z-index: -1;
 
         font: $font-advantages-number-tablet;
-        color: $color-secondary;
+        color: $color-4;
       }
     }
   }
@@ -151,7 +151,7 @@
   width: 60px;
   height: 60px;
 
-  background-color: $background-color-primary;
+  background-color: $background-color-3;
 
   display: flex;
   justify-content: center;
