--- a/src/sass/blocks/example.scss
+++ b/src/sass/blocks/example.scss
@@ -1,5 +1,5 @@
 .example {
-  background-color: $background-color-secondary;
+  background-color: $background-color-4;
 }
 
 .example__wrapper {
@@ -42,7 +42,7 @@
   margin-bottom: 20px;
 
   font: $font-text-normal-mobile;
-  color: $color-special-dark-grey;
+  color: $color-6;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 54px;
@@ -88,7 +88,7 @@
   flex-direction: column;
 
   font: $font-module-description-mobile;
-  color: $color-special-dark-grey;
+  color: $color-6;
   text-align: center;
 
   @media (min-width: $tablet-width) {
