--- a/src/sass/blocks/footer.scss
+++ b/src/sass/blocks/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: $background-color-secondary;
+  background-color: $background-color-4;
 }
 
 .footer__wrapper {
@@ -41,7 +41,7 @@
 
       margin-bottom: 20px;
 
-      background-color: $background-color-special-grey;
+      background-color: $background-color-5;
     }
 
     &::after {
@@ -52,7 +52,7 @@
 
       margin-top: 20px;
 
-      background-color: $background-color-special-grey;
+      background-color: $background-color-5;
     }
   }
 
