--- a/src/sass/blocks/gain-type.scss
+++ b/src/sass/blocks/gain-type.scss
@@ -2,7 +2,7 @@
   width: 280px;
   min-height: 266px;
 
-  background-color: $background-color-secondary;
+  background-color: $background-color-4;
 
   @media (min-width: $tablet-width) {
     width: 708px;
@@ -64,7 +64,7 @@
     position: absolute;
     z-index: -1;
 
-    background-color: $background-color-primary;
+    background-color: $background-color-3;
     border-radius: 50%;
 
     @media (min-width: $tablet-width) {
@@ -125,7 +125,7 @@
   @include indent-reset;
 
   font: $font-text-normal-mobile;
-  color: $color-special-dark-grey;
+  color: $color-6;
 
   &::after {
     content: "";
@@ -144,7 +144,7 @@
 
   @media (min-width: $tablet-width) {
     font: $font-text-normal-tablet;
-    color: $color-black;
+    color: $color-1;
 
     margin-bottom: 48px;
     width: 340px;
