--- a/src/sass/blocks/nav-list.scss
+++ b/src/sass/blocks/nav-list.scss
@@ -43,7 +43,7 @@
         bottom: -16px;
         height: 3px;
 
-        background-color: $background-color-primary;
+        background-color: $background-color-3;
       }
     }
   }
@@ -66,7 +66,7 @@
   }
 
   &--current {
-    border-bottom: 2px solid $background-color-primary;
+    border-bottom: 2px solid $background-color-3;
   }
 
   &:first-child {
