--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -8,21 +8,20 @@ $tablet-width-only: 1439px;
 $desktop-width: 1440px;
 
 /* colors */
-$color-primary: #68b738;
-$color-secondary: #f2f2f2;
-$color-special-grey: #d9d9d9;
-$color-black: #000000;
-$color-white: #ffffff;
-$color-special-dark-grey: #444444;
+$color-1: #000000;
+$color-2: #ffffff;
+$color-3: #68b738;
+$color-4: #f2f2f2;
+$color-5: #d9d9d9;
+$color-6: #444444;
 
 /* background-color */
-$background-color-primary: #68b738;
-$background-color-secondary: #f2f2f2;
-$background-color-special-grey: #d9d9d9;
-$color-black: #000000;
-$background-color-black: #000000;
-$background-color-white: #ffffff;
-$background-color-special-dark-grey: #444444;
+$background-color-1: #000000;
+$background-color-2: #ffffff;
+$background-color-3: #68b738;
+$background-color-4: #f2f2f2;
+$background-color-5: #d9d9d9;
+$background-color-6: #444444;
 
 /* fonts */
 $font-body: 400 1.6rem/1.25 "Lato", "Arial", sans-serif;
