Приступил к адаптивной сетке в странице формы.  Убрал видимый эелемент в списке в мобильной версии

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,3 +20,6 @@
 @import "blocks/program";
 @import "blocks/social";
 @import "blocks/location";
+@import "blocks/catalog";
+@import "blocks/form-selection.scss";
+@import "blocks/program-selection.scss";
