--- a/src/sass/blocks/main-nav.scss
+++ b/src/sass/blocks/main-nav.scss
@@ -144,11 +144,7 @@
 }
 
 @media (max-width: $mobile-width-only) {
-  .main-nav--closed .nav-list__item {
+  .nav-list__item {
     display: none;
   }
-}
-
-.main-nav--nojs .main-nav__wrapper {
-  display: none;
 }
