--- a/src/sass/blocks/main-nav.scss
+++ b/src/sass/blocks/main-nav.scss
@@ -31,6 +31,16 @@
   z-index: 10;
   background-color: $background-color-2;
 
+  &--border {
+    @media (max-width: $mobile-width-only) {
+      &::after {
+        content: "";
+        display: block;
+        border-bottom: 1px solid $background-color-5;
+      }
+    }
+  }
+
   @media (min-width: $tablet-width) {
     margin: 0;
     margin-top: 18px;
