--- a/src/sass/blocks/program-selection.scss
+++ b/src/sass/blocks/program-selection.scss
@@ -1,3 +1,36 @@
 .program-selection__title {
+  @include indent-reset;
+
   font: $font-title-main-normal-mobile;
+
+  margin-bottom: 37px;
+
+  @media (min-width: $tablet-width) {
+    font: $font-title-main-normal-tablet;
+
+    margin-bottom: 54px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 56px;
+  }
+}
+
+.program-selection__description {
+  margin-bottom: 39px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 66px;
+  }
+}
+
+.program-selection__text {
+  @include indent-reset;
+
+  font: $font-program-selection-text-mobile;
+  text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font: $font-program-selection-text-tablet;
+  }
 }
