--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,1 +1,43 @@
 /* Начните писать стили здесь */
+
+/* Blocks */
+@import "./blocks/additional-product-list.scss";
+@import "./blocks/additional-product.scss";
+@import "./blocks/additionally.scss";
+@import "./blocks/advantages-list.scss";
+@import "./blocks/advantages.scss";
+@import "./blocks/button.scss";
+@import "./blocks/cat-result.scss";
+@import "./blocks/catalog-card.scss";
+@import "./blocks/catalog-list.scss";
+@import "./blocks/comment.scss";
+@import "./blocks/contact-details.scss";
+@import "./blocks/container.scss";
+@import "./blocks/copyright.scss";
+@import "./blocks/description.scss";
+@import "./blocks/example.scss";
+@import "./blocks/field-content.scss";
+@import "./blocks/field-input.scss";
+@import "./blocks/gift.scss";
+@import "./blocks/information-container.scss";
+@import "./blocks/location.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/main-container.scss";
+@import "./blocks/main-footer.scss";
+@import "./blocks/main-header.scss";
+@import "./blocks/main-nav.scss";
+@import "./blocks/map.scss";
+@import "./blocks/program-selection.scss";
+@import "./blocks/program-type.scss";
+@import "./blocks/program-types-container.scss";
+@import "./blocks/program-types.scss";
+@import "./blocks/program.scss";
+@import "./blocks/site-list.scss";
+@import "./blocks/social.scss";
+@import "./blocks/title.scss";
+@import "./blocks/visually-hidden.scss";
+
+/* Global */
+@import "./global/fonts.scss";
+@import "./global/mixins.scss";
+@import "./global/variables.scss";
