Добавил переменные разрешения каждого устройства

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -44,6 +44,7 @@
   font-display: swap;
 }
 /* Здесь используются переменные */
+/* device-width */
 /* Colors */
 /* background-colors */
 /* Blocks */
