--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -1,5 +1,14 @@
 /* Здесь используются переменные */
 
+/* device-width */
+$mobile-width: 320px;
+$mobile-width-only: 768px;
+
+$tablet-width: 769px;
+$tablet-width-only: 1439px;
+
+$desktop-width: 1440px;
+
 /* Colors */
 $color-1: #000000;
 $color-2: #ffffff;
