Заверстал адаптивно шапку

--- a/src/sass/blocks/site-list.scss
+++ b/src/sass/blocks/site-list.scss
@@ -1,1 +1,8 @@
+.site-list {
+  display: flex;
+  flex-direction: column;
 
+  @media (min-width: $tablet-width) {
+    flex-direction: row;
+  }
+}
