--- a/src/css/style.css
+++ b/src/css/style.css
@@ -48,4 +48,35 @@
 /* Colors */
 /* background-colors */
 /* Blocks */
+.main-header__wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.main-header__container-nav {
+  display: flex;
+}
+
+.main-nav {
+  display: flex;
+}
+
+.main-nav__toggle {
+  order: 3;
+}
+@media (min-width: 769px) {
+  .main-nav__toggle {
+    display: none;
+  }
+}
+
+.site-list {
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width: 769px) {
+  .site-list {
+    flex-direction: row;
+  }
+}
 /*# sourceMappingURL=style.css.map */
