Добавил файл для селекторов по тегам. Добавил миксины

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -47,6 +47,17 @@
 /* device-width */
 /* Colors */
 /* background-colors */
+body {
+  margin: 0;
+  padding: 0;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 /* Blocks */
 .main-header__wrapper {
   display: flex;
