--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,6 +4,7 @@
 @import "./global/fonts.scss";
 @import "./global/mixins.scss";
 @import "./global/variables.scss";
+@import "./global/global.scss";
 
 /* Blocks */
 @import "./blocks/additional-product-list.scss";
