измения названия секции в переменных, удалил не нужне блоки

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -44,12 +44,26 @@
   font-display: swap;
 }
 /* Здесь используются переменные */
-/* device-width */
-/* Colors */
-/* background-colors */
+/* === Viewports === */
+/* === Colors === */
+/* === background-colors === */
 body {
   margin: 0;
   padding: 0;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 *,
@@ -116,19 +130,5 @@ body {
 .site-list__link {
   color: #000000;
   text-decoration: none;
-}
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  -webkit-clip-path: inset(100%);
-          clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
 }
 /*# sourceMappingURL=style.css.map */
