--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -1,6 +1,6 @@
 /* Здесь используются переменные */
 
-/* device-width */
+/* === Viewports === */
 $mobile-width: 320px;
 $mobile-width-only: 768px;
 
@@ -9,14 +9,14 @@ $tablet-width-only: 1439px;
 
 $desktop-width: 1440px;
 
-/* Colors */
+/* === Colors === */
 $color-1: #000000;
 $color-2: #ffffff;
 $color-3: #68b738;
 $color-4: #f2f2f2;
 $color-5: #444444;
 
-/* background-colors */
+/* === background-colors === */
 $background-color-1: #000000;
 $background-color-2: #ffffff;
 $background-color-3: #68b738;
