--- a/src/sass/blocks/main-header.scss
+++ b/src/sass/blocks/main-header.scss
@@ -8,13 +8,16 @@
   justify-content: space-between;
 
   margin: 0 auto;
+  padding: 0 20px;
   width: 280px;
 
   @media (min-width: $tablet-width) {
     width: 708px;
+    padding: 0 30px;
   }
 
   @media (min-width: $desktop-width) {
     width: 1220px;
+    padding: 0 110px;
   }
 }
