--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,8 +14,8 @@
 @import "./blocks/additional-product-list.scss";
 @import "./blocks/additional-product.scss";
 @import "./blocks/additionally.scss";
-@import "./blocks/advantages-list.scss";
-@import "./blocks/advantages.scss";
+@import "./blocks/work-principle-list.scss";
+@import "./blocks/work-principle.scss";
 @import "./blocks/button.scss";
 @import "./blocks/cat-result.scss";
 @import "./blocks/catalog-card.scss";
@@ -28,7 +28,7 @@
 @import "./blocks/field-content.scss";
 @import "./blocks/field-input.scss";
 @import "./blocks/gift.scss";
-@import "./blocks/information-container.scss";
+@import "./blocks/fields-container.scss";
 @import "./blocks/location.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/main-container.scss";
