--- a/src/sass/blocks/main-header.scss
+++ b/src/sass/blocks/main-header.scss
@@ -9,15 +9,18 @@
 
   margin: 0 auto;
   padding: 0 20px;
-  width: 280px;
+
+  width: $mobile-width;
 
   @media (min-width: $tablet-width) {
-    width: 708px;
+    width: $tablet-width;
+
     padding: 0 30px;
   }
 
   @media (min-width: $desktop-width) {
-    width: 1220px;
+    width: $desktop-width;
+
     padding: 0 110px;
   }
 }
