--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -22,3 +22,4 @@ $background-color-2: #ffffff;
 $background-color-3: #68b738;
 $background-color-4: #f2f2f2;
 $background-color-5: #444444;
+$background-color-6: #eaeaea;
