--- a/src/sass/blocks/program-type.scss
+++ b/src/sass/blocks/program-type.scss
@@ -1,3 +1,13 @@
 .program-type {
+  width: 280px;
+
   background-color: $background-color-4;
+
+  @media (min-width: $tablet-width) {
+    width: 708px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 570px;
+  }
 }
