--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,8 +14,8 @@
 @import "./blocks/additional-product-list.scss";
 @import "./blocks/additional-product.scss";
 @import "./blocks/additionally.scss";
-@import "./blocks/advantages-list.scss";
-@import "./blocks/advantages.scss";
+@import "./blocks/work-principle-list.scss";
+@import "./blocks/work-principle.scss";
 @import "./blocks/button.scss";
 @import "./blocks/cat-result.scss";
 @import "./blocks/catalog-card.scss";
