--- a/src/sass/blocks/work-principle-list.scss
+++ b/src/sass/blocks/work-principle-list.scss
@@ -7,12 +7,15 @@
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
+    gap: 37px 100px;
   }
 }
 
 .work-principle-list__item {
+  width: 280px;
+
   @media (min-width: $tablet-width) {
-    width: 240px;
+    width: 245px;
   }
 
   @media (min-width: $desktop-width) {
