--- a/src/css/style.css
+++ b/src/css/style.css
@@ -258,6 +258,17 @@ body {
   display: flex;
 }
 
+.fields-container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+@media (min-width: 1440px) {
+  .fields-container--contacts {
+    flex-direction: row;
+  }
+}
+
 .location__address-wrapper {
   width: 320px;
   padding: 0 20px;
