--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -25,7 +25,7 @@
 @import "./blocks/copyright.scss";
 @import "./blocks/description.scss";
 @import "./blocks/example.scss";
-@import "./blocks/field-content.scss";
+@import "./blocks/fields-container.scss";
 @import "./blocks/field-input.scss";
 @import "./blocks/gift.scss";
 @import "./blocks/information-container.scss";
