Сделал адаптивным Дополнительно

--- a/src/sass/blocks/additionally.scss
+++ b/src/sass/blocks/additionally.scss
@@ -26,6 +26,10 @@
   }
 }
 
+.additionally__field-label {
+  width: 220px;
+}
+
 .additionally__send-container {
   display: flex;
   flex-direction: column;
