--- a/src/css/style.css
+++ b/src/css/style.css
@@ -110,6 +110,10 @@ body {
   }
 }
 
+.additionally__field-label {
+  width: 220px;
+}
+
 .additionally__send-container {
   display: flex;
   flex-direction: column;
@@ -265,6 +269,11 @@ body {
 }
 @media (min-width: 1440px) {
   .fields-container--contacts {
+    flex-direction: row;
+  }
+}
+@media (min-width: 769px) {
+  .fields-container--additionally {
     flex-direction: row;
   }
 }
