--- a/src/sass/blocks/fields-container.scss
+++ b/src/sass/blocks/fields-container.scss
@@ -8,4 +8,10 @@
       flex-direction: row;
     }
   }
+
+  &--additionally {
+    @media (min-width: $tablet-width) {
+      flex-direction: row;
+    }
+  }
 }
