--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -44,3 +44,4 @@
 @import "./blocks/site-list.scss";
 @import "./blocks/social.scss";
 @import "./blocks/title.scss";
+@import "./blocks/location-address-wrapper.scss";
