--- a/src/sass/blocks/location.scss
+++ b/src/sass/blocks/location.scss
@@ -1,5 +1,6 @@
 .location__address-wrapper {
   width: $mobile-width;
+  min-height: 112px;
 
   padding: 0 20px;
   margin: 0 auto;
@@ -8,6 +9,7 @@
 
   @media (min-width: $tablet-width) {
     width: $tablet-width;
+    min-height: 199px;
 
     padding: 0 70px;
   }
