--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,6 +18,7 @@
 @import "./blocks/work-principle.scss";
 @import "./blocks/button.scss";
 @import "./blocks/cat-result.scss";
+@import "./blocks/catalog.scss";
 @import "./blocks/catalog-card.scss";
 @import "./blocks/catalog-list.scss";
 @import "./blocks/comment.scss";
