Отцентрировал навигацию, добавил бургерное меню в закрытом виде и в открытом виде

--- a/src/sass/blocks/site-list.scss
+++ b/src/sass/blocks/site-list.scss
@@ -1,11 +1,13 @@
 .site-list {
   @include list-reset;
 
-  display: flex;
-  flex-direction: column;
+  display: none;
 
   @media (min-width: $tablet-width) {
     width: 440px;
+
+    display: flex;
+    flex-direction: column;
   }
 
   @media (min-width: $desktop-width) {
