--- a/src/css/style-LAPTOP-L2J4IQT6-3.css
+++ b/src/css/style-LAPTOP-L2J4IQT6-3.css
@@ -512,12 +512,10 @@ body {
   box-shadow: 0 8px 0 0 rgba(0, 0, 0, 0.3), 0 16px 0 0 rgba(0, 0, 0, 0.3);
 }
 
-.main-nav--opened .main-nav__toggle {
-  margin-top: -3px;
-}
 .main-nav--opened .main-nav__toggle::before, .main-nav--opened .main-nav__toggle::after {
   content: "";
   display: block;
+  margin-top: 0;
   background-color: #000000;
   width: 24px;
   height: 2px;
@@ -525,14 +523,9 @@ body {
 }
 .main-nav--opened .main-nav__toggle::before {
   transform: rotate(45deg);
-  box-shadow: none;
 }
 .main-nav--opened .main-nav__toggle::after {
   transform: rotate(-45deg);
-}
-
-.main-nav--opened .main-nav__toggle:active::before, .main-nav--opened .main-nav__toggle:active::after {
-  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .map__image {
