--- a/src/sass/blocks/main-header.scss
+++ b/src/sass/blocks/main-header.scss
@@ -6,11 +6,13 @@
 .main-header__container-nav {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 
   margin: 0 auto;
   padding: 0 20px;
 
   width: $mobile-width;
+  min-height: 65px;
 
   @media (min-width: $tablet-width) {
     width: $tablet-width;
