--- a/src/sass/blocks/main-nav.scss
+++ b/src/sass/blocks/main-nav.scss
@@ -1,11 +1,74 @@
 .main-nav {
   display: flex;
+
+  position: relative;
 }
 
 .main-nav__toggle {
+  @include button-reset;
+
+  display: block;
+
+  margin-top: -15px;
+
+  width: 24px;
+  height: 20px;
+
+  background-color: transparent;
+
   order: 3;
 
   @media (min-width: $tablet-width) {
     display: none;
+  }
+}
+
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+  display: block;
+
+  width: 24px;
+  height: 2px;
+
+  background-color: $background-color-1;
+  box-shadow: 0 7px 0 0 $background-color-1, 0 14px 0 0 $background-color-1;
+}
+
+.main-nav--closed .main-nav__toggle:active::before {
+  background-color: rgba($background-color-1, 30%);
+  box-shadow: 0 8px 0 0 rgba($background-color-1, 30%),
+    0 16px 0 0 rgba($background-color-1, 30%);
+}
+
+.main-nav--opened .main-nav__toggle {
+  margin-top: -3px;
+
+  &::before,
+  &::after {
+    content: "";
+    display: block;
+
+    background-color: $background-color-1;
+
+    width: 24px;
+    height: 2px;
+
+    position: absolute;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+    box-shadow: none;
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+}
+
+.main-nav--opened .main-nav__toggle:active {
+  &::before,
+  &::after {
+    background-color: rgba($background-color-1, 30%);
   }
 }
