--- a/src/sass/blocks/main-nav.scss
+++ b/src/sass/blocks/main-nav.scss
@@ -72,3 +72,7 @@
     background-color: rgba($background-color-1, 30%);
   }
 }
+
+// .main-nav--opened .main-nav__list {
+//   display: block;
+// }
