--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -46,3 +46,30 @@ $background-color-2: #ffffff;
 $background-color-3: #68b738;
 $background-color-4: #f2f2f2;
 $background-color-5: #444444;
+
+/* === fonts-mobile === */
+$font-user-list-mobile: 500 2rem/1 "Oswald", Arial, sans-serif;
+
+$font-title-large-mobile: 400 3.6rem/1 "Oswald", Arial, sans-serif;
+$font-title-medium-mobile: 400 3.6rem/1.11 "Oswald", Arial, sans-serif;
+$font-title-small-mobile: 400 2.4rem/1.54 "Oswald", Arial, sans-serif;
+
+$font-text-small-mobile: 400 1.4rem/1.28 "Lato", Arial, sans-serif;
+
+/* === fonts-tablet === */
+$font-user-list-tablet: 400 1.8rem/1.33 "Oswald", Arial, sans-serif;
+
+$font-title-large-tablet: 400 6rem/1 "Oswald", Arial, sans-serif;
+$font-title-medium-tablet: 400 6rem/1 "Oswald", Arial, sans-serif;
+$font-title-small-mobile: 400 3.6rem/1 "Oswald", Arial, sans-serif;
+
+$font-text-small-tablet: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
+
+/* === fonts-desktop === */
+$font-user-list-mobile: 400 2rem/1 "Oswald", Arial, sans-serif;
+
+$font-title-large-desktop: 400 6rem/1 "Oswald", Arial, sans-serif;
+$font-title-medium-desktop: 400 6rem/1 "Oswald", Arial, sans-serif;
+$font-title-small-mobile: 400 3.6rem/1 "Oswald", Arial, sans-serif;
+
+$font-text-small-desktop: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
