--- a/src/css/style.css
+++ b/src/css/style.css
@@ -465,6 +465,7 @@ body {
   padding: 0 20px;
   width: 320px;
   min-height: 65px;
+  background-color: #ffffff;
 }
 @media (min-width: 769px) {
   .main-header__container-nav {
