--- a/src/sass/blocks/main-header.scss
+++ b/src/sass/blocks/main-header.scss
@@ -14,6 +14,8 @@
   width: $mobile-width;
   min-height: 65px;
 
+  background-color: $background-color-2;
+
   @media (min-width: $tablet-width) {
     width: $tablet-width;
 
