--- a/src/sass/blocks/site-list.scss
+++ b/src/sass/blocks/site-list.scss
@@ -7,15 +7,103 @@
     width: 440px;
 
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
   }
 
   @media (min-width: $desktop-width) {
-    min-width: 478px;
-    max-width: 550px;
+    width: auto;
+  }
+}
+
+.site-list__item {
+  @media (min-width: $tablet-width) {
+    &:not(:last-child) {
+      margin-right: 24px;
+    }
+
+    &--active {
+      position: relative;
+
+      &:after {
+        content: "";
+        display: block;
+
+        background-color: $background-color-3;
+
+        position: absolute;
+        bottom: -10px;
+        right: 0;
+        left: 0;
+
+        height: 2px;
+      }
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    &--active {
+      &:after {
+        content: "";
+        display: block;
+
+        background-color: $background-color-3;
+
+        position: absolute;
+        bottom: -10px;
+        right: 0;
+        left: 0;
+
+        height: 2px;
+      }
+    }
+
+    &--active-white {
+      &:after {
+        content: "";
+        display: block;
+
+        background-color: $background-color-2;
+
+        position: absolute;
+        bottom: -10px;
+        right: 0;
+        left: 0;
+
+        height: 2px;
+      }
+    }
   }
 }
 
 .site-list__link {
   @include link-reset;
+
+  @media (min-width: $tablet-width) {
+    font: $font-site-list-tablet;
+    text-transform: uppercase;
+
+    &:hover {
+      opacity: 0.6;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    font: $font-site-list-desktop;
+
+    &--white {
+      color: $color-2;
+
+      &:hover {
+        opacity: 0.6;
+      }
+
+      &:active {
+        opacity: 0.3;
+      }
+    }
+  }
 }
