--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -54,3 +54,6 @@ $font-title-medium-desktop: 200 6rem/1 "Oswald", Arial, sans-serif;
 $font-title-small-mobile: 200 3.6rem/1 "Oswald", Arial, sans-serif;
 
 $font-text-small-desktop: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
+
+/* force-state elements */
+$background-color-3-hover: #5eaa2f;
