Стилизовал виды програм, 2 блока программы для мобильной, планшетной и десктопной версии, добавил состояние кнопке

--- a/src/sass/blocks/button.scss
+++ b/src/sass/blocks/button.scss
@@ -1,6 +1,6 @@
 .button {
-  @inlude button-reset;
-  @inlude link-reset;
+  @include button-reset;
+  @include link-reset;
 
   &--primary {
     background-color: $background-color-3;
