--- a/src/css/style.css
+++ b/src/css/style.css
@@ -228,8 +228,11 @@ body {
 }
 
 .button {
-  @inlude button-reset;
-  @inlude link-reset;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  color: #000000;
+  text-decoration: none;
 }
 .button--primary {
   background-color: #68b738;
@@ -344,6 +347,15 @@ body {
 .copyright__link {
   color: #000000;
   text-decoration: none;
+}
+
+.description--small {
+  font: 400 1.4rem/1.28 "Lato", Arial, sans-serif;
+}
+@media (min-width: 769px) {
+  .description--small {
+    font: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
+  }
 }
 
 .example {
@@ -649,16 +661,152 @@ body {
 
 .program-type {
   width: 280px;
+  min-height: 266px;
+  padding: 25px 20px 18px;
   background-color: #f2f2f2;
 }
 @media (min-width: 769px) {
   .program-type {
     width: 708px;
+    min-height: 372px;
+    padding: 77px 62px 53px 53px;
   }
 }
 @media (min-width: 1440px) {
   .program-type {
     width: 570px;
+    min-height: 374px;
+    padding: 47px 52px 55px;
+  }
+}
+
+.program-type__content {
+  display: flex;
+  flex-direction: column;
+}
+
+.program-type__wrapper-name {
+  display: flex;
+  align-items: center;
+  margin-bottom: 22px;
+}
+@media (min-width: 769px) {
+  .program-type__wrapper-name {
+    margin-bottom: 0;
+  }
+}
+@media (min-width: 1440px) {
+  .program-type__wrapper-name {
+    margin-bottom: 39px;
+  }
+}
+
+.program-type__icon {
+  margin-right: 19px;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #68b738;
+}
+@media (min-width: 769px) {
+  .program-type__icon {
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    top: 92px;
+    right: 62px;
+  }
+}
+@media (min-width: 1440px) {
+  .program-type__icon {
+    width: 100px;
+    height: 100px;
+    margin-right: 62px;
+    position: static;
+  }
+}
+
+.program-type__title {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  text-transform: uppercase;
+}
+@media (min-width: 769px) {
+  .program-type__title {
+    margin-bottom: 22px;
+  }
+}
+@media (min-width: 1440px) {
+  .program-type__title {
+    margin-bottom: 0;
+  }
+}
+
+.program-type__description {
+  margin: 0;
+  padding: 0;
+  color: #444444;
+}
+.program-type__description::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #d9d9d9;
+  margin-top: 23px;
+  margin-bottom: 16px;
+}
+@media (min-width: 769px) {
+  .program-type__description::after {
+    display: none;
+  }
+}
+@media (min-width: 769px) {
+  .program-type__description {
+    color: #000000;
+    width: 340px;
+    margin-bottom: 48px;
+  }
+}
+@media (min-width: 1440px) {
+  .program-type__description {
+    width: auto;
+    margin-bottom: 23px;
+  }
+}
+
+.program-type__link {
+  display: inline-flex;
+  align-items: center;
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+.program-type__link:hover {
+  opacity: 0.3;
+}
+@media (max-width: 768px) {
+  .program-type__link {
+    width: 134px;
+  }
+}
+@media (min-width: 1440px) {
+  .program-type__link {
+    width: 168px;
+  }
+}
+
+.program-type__link-text {
+  display: inline-block;
+  margin-right: 15px;
+  font: 200 1.6rem/1 "Oswald", Arial, sans-serif;
+  text-transform: uppercase;
+}
+@media (min-width: 769px) {
+  .program-type__link-text {
+    margin-right: 25px;
+    font: 200 2rem/normal "Oswald", Arial, sans-serif;
   }
 }
 
@@ -689,6 +837,7 @@ body {
 
 .program-types__type {
   width: 280px;
+  position: relative;
 }
 .program-types__type--weight-loss {
   margin-bottom: 20px;
@@ -962,6 +1111,14 @@ body {
 @media (min-width: 769px) {
   .title--large {
     font: 200 6rem/1 "Oswald", Arial, sans-serif;
+  }
+}
+.title--small {
+  font: 200 2.4rem/1.54 "Oswald", Arial, sans-serif;
+}
+@media (min-width: 769px) {
+  .title--small {
+    font: 200 3.6rem/1 "Oswald", Arial, sans-serif;
   }
 }
 
