--- a/src/sass/blocks/program-type.scss
+++ b/src/sass/blocks/program-type.scss
@@ -1,13 +1,157 @@
 .program-type {
   width: 280px;
+  min-height: 266px;
+
+  padding: 25px 20px 18px;
 
   background-color: $background-color-4;
 
   @media (min-width: $tablet-width) {
     width: 708px;
+    min-height: 372px;
+
+    padding: 77px 62px 53px 53px;
   }
 
   @media (min-width: $desktop-width) {
     width: 570px;
+    min-height: 374px;
+
+    padding: 47px 52px 55px;
+  }
+}
+
+.program-type__content {
+  display: flex;
+  flex-direction: column;
+}
+
+.program-type__wrapper-name {
+  display: flex;
+  align-items: center;
+
+  margin-bottom: 22px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 39px;
+  }
+}
+
+.program-type__icon {
+  margin-right: 19px;
+
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+
+  border-radius: 50%;
+  background-color: $background-color-3;
+
+  @media (min-width: $tablet-width) {
+    width: 200px;
+    height: 200px;
+
+    position: absolute;
+    top: 92px;
+    right: 62px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 100px;
+    height: 100px;
+
+    margin-right: 62px;
+
+    position: static;
+  }
+}
+
+.program-type__title {
+  @include indent-reset;
+  display: inline-block;
+
+  text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 22px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 0;
+  }
+}
+
+.program-type__description {
+  @include indent-reset;
+  color: $color-5;
+
+  &::after {
+    content: "";
+    display: block;
+
+    width: 100%;
+    height: 1px;
+
+    background-color: $background-color-7;
+
+    margin-top: 23px;
+    margin-bottom: 16px;
+
+    @media (min-width: $tablet-width) {
+      display: none;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    color: $color-1;
+
+    width: 340px;
+
+    margin-bottom: 48px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: auto;
+
+    margin-bottom: 23px;
+  }
+}
+
+.program-type__link {
+  display: inline-flex;
+  align-items: center;
+
+  padding-top: 4px;
+  padding-bottom: 4px;
+
+  &:hover {
+    opacity: 0.3;
+  }
+
+  @media (max-width: $mobile-width-only) {
+    width: 134px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 168px;
+  }
+}
+
+.program-type__link-text {
+  display: inline-block;
+
+  margin-right: 15px;
+
+  font: $font-catalog-button-mobile;
+  text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    margin-right: 25px;
+
+    font: $font-catalog-button-tablet;
   }
 }
