--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -15,6 +15,8 @@ $color-2: #ffffff;
 $color-3: #68b738;
 $color-4: #f2f2f2;
 $color-5: #444444;
+$color-6: #eaeaea;
+$color-7: #d9d9d9;
 
 /* === background-colors === */
 $background-color-1: #000000;
@@ -23,6 +25,7 @@ $background-color-3: #68b738;
 $background-color-4: #f2f2f2;
 $background-color-5: #444444;
 $background-color-6: #eaeaea;
+$background-color-7: #d9d9d9;
 
 /* === fonts-mobile === */
 $font-site-list-mobile: 500 2rem/1 "Oswald", Arial, sans-serif;
@@ -34,24 +37,26 @@ $font-title-small-mobile: 200 2.4rem/1.54 "Oswald", Arial, sans-serif;
 $font-text-small-mobile: 400 1.4rem/1.28 "Lato", Arial, sans-serif;
 
 $font-button-small-mobile: 200 1.4rem/1.28 "Oswald", Arial, sans-serif;
+$font-catalog-button-mobile: 200 1.6rem/1 "Oswald", Arial, sans-serif;
 
 /* === fonts-tablet === */
 $font-site-list-tablet: 200 1.8rem/1.33 "Oswald", Arial, sans-serif;
 
 $font-title-large-tablet: 200 6rem/1 "Oswald", Arial, sans-serif;
 $font-title-medium-tablet: 200 6rem/1 "Oswald", Arial, sans-serif;
-$font-title-small-mobile: 200 3.6rem/1 "Oswald", Arial, sans-serif;
+$font-title-small-tablet: 200 3.6rem/1 "Oswald", Arial, sans-serif;
 
 $font-text-small-tablet: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
 
 $font-button-small-tablet: 200 2rem/1 "Oswald", Arial, sans-serif;
+$font-catalog-button-tablet: 200 2rem / normal "Oswald", Arial, sans-serif;
 
 /* === fonts-desktop === */
 $font-site-list-desktop: 200 2rem/1 "Oswald", Arial, sans-serif;
 
 $font-title-large-desktop: 200 6rem/1 "Oswald", Arial, sans-serif;
 $font-title-medium-desktop: 200 6rem/1 "Oswald", Arial, sans-serif;
-$font-title-small-mobile: 200 3.6rem/1 "Oswald", Arial, sans-serif;
+$font-title-small-desktop: 200 3.6rem/1 "Oswald", Arial, sans-serif;
 
 $font-text-small-desktop: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
 
