--- a/src/css/style.css
+++ b/src/css/style.css
@@ -923,6 +923,17 @@ body {
   }
 }
 
+@media (min-width: 769px) {
+  .program__wrapper-description {
+    margin-left: 88px;
+  }
+}
+@media (min-width: 1440px) {
+  .program__wrapper-description {
+    margin-left: 80px;
+  }
+}
+
 .program__title {
   margin: 0;
   padding: 0;
