--- a/src/sass/blocks/program-type.scss
+++ b/src/sass/blocks/program-type.scss
@@ -44,6 +44,8 @@
 .program-type__icon {
   margin-right: 19px;
 
+  position: relative;
+
   display: inline-block;
   width: 50px;
   height: 50px;
