--- a/src/sass/blocks/program-types.scss
+++ b/src/sass/blocks/program-types.scss
@@ -1,6 +1,7 @@
 .program-types__wrapper {
   width: $mobile-width;
 
+  margin-bottom: 20px;
   padding: 0 20px;
   padding-top: 20px;
 
@@ -11,6 +12,7 @@
   @media (min-width: $tablet-width) {
     width: $tablet-width;
 
+    margin-bottom: 45px;
     padding: 0 30px;
     padding-top: 0;
   }
@@ -18,6 +20,7 @@
   @media (min-width: $desktop-width) {
     width: $desktop-width;
 
+    margin-bottom: 71px;
     padding: 0 110px;
     padding-top: 82px;
 
